Fix timeline visibility

--- a/src/css/classify-styles.css
+++ b/src/css/classify-styles.css
@@ -153,8 +153,8 @@ li {
   .bar {
 	background-color:#7dad0b;
 	display: block;
-	width: 2vw;
-	margin: 0 0.1vw;
+	width: 3vw;
+	margin: 0 0.05vw;
 	align-self: flex-end;
   }
 
